2012-11-29  Roland McGrath  <roland@hack.frob.com>

	* inet/tst-inet6_rth.c (do_test): Use a union rather than type punning.

2012-11-28  Jeff Law  <law@redhat.com>

	[BZ #13761]
	* nscd/grpcache.c (cache_addgr): Rename alloca_used to
	dataset_temporary.  Track alloca usage into alloca_used.
	If dataset is large allocate and release it via malloc/free.

2012-06-04  Florian Weimer  <fweimer@redhat.com>

	[BZ #14197]
	* debug/test-strcpy_chk.c: Mention __chk_fail ABI test.

2012-11-28  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2012-11-28  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14803]
	* sysdeps/ieee754/ldbl-96/e_asinl.c (pio2_hi): Use hex float value
	of pi/2 rounded to nearest to 64 bits.
	(pio2_lo): Use hex float value of pi/2 - pio2_hi rounded to
	nearest to 64 bits.
	(pio4_hi): Use hex float value of pi/4 rounded to nearest to 64
	bits.

2012-11-28  Jeff Law <law@redhat.com>
	    Martin Osvald <mosvald@redhat.com>

	[BZ #14889]
	* sunrpc/rpc/svc.h (__svc_accept_failed): New prototype.
	* sunrpc/svc.c: Include time.h.
	(__svc_accept_failed): New function.
	* sunrpc/svc_tcp.c (rendezvous_request): If the accept fails for
	any reason other than EINTR, call __svc_accept_failed.
	* sunrpc/svc_udp.c (svcudp_recv): Similarly.
	* sunrpc/svc_unix.c (rendezvous_request): Similarly.

2012-11-28  Andreas Schwab  <schwab@suse.de>

	* scripts/abilist.awk: Also handle indirect functions in .opd
	section.

2012-11-28  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13881]
	* sysdeps/x86/fpu/powl_helper.c: New file.
	* sysdeps/x86/fpu/Makefile: Likewise.
	* sysdeps/i386/fpu/e_powl.S (limit): Remove object.
	(p3): New object.
	(__ieee754_powl): Use __powl_helper for finite arguments except
	integer exponents below 8.
	* sysdeps/x86_64/fpu/e_powl.S (limit): Remove object.
	(p3): New object.
	(__ieee754_powl): Use __powl_helper for finite arguments except
	integer exponents below 8.